--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.center {
+  margin: auto;
+  width: 50%;
+  /* border: 3px solid green; */
+  box-shadow: 5px 10px 10px grey;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  padding: 10px;
+  background-color: rgb(173, 13, 13);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-family: "Roboto Slab", serif;
+  font-weight: 400;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+h4 {
+  font-family: "Roboto Slab", serif;
+  font-weight: 100;
 }
